# lichess-zoom-client

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
assets/pieces/wikipedia/: SOURCE.txt
src/: bot.rs  lichess.rs  main.rs  openai.rs  recall.rs  render.rs  voice_commands.rs
