[package]
name = "hackathon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = "0.27"
tokio = { version = "1", features = ["full"] }
